<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_permissions"
        android:icon="@drawable/ic_nav_permissions"
        android:title="@string/nav_permissions" />
    <item
        android:id="@+id/nav_custom_commands"
        android:icon="@drawable/ic_nav_custom_commands"
        android:title="@string/nav_custom_commands" />
    <item
        android:id="@+id/nav_guide"
        android:icon="@drawable/ic_nav_guide"
        android:title="@string/nav_guide" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
